workshop/config/hello-world-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: hello-world
  labels:
    app: hello-world
spec:
  containers:
  - env:
    - name: MESSAGE
      value: Hello from a pod
    image: 192.168.1.11:5000/hello-world:latest
    imagePullPolicy: Always
    name: hello-world
    resources:
      limits:
        cpu: "0.5"
      requests:
        cpu: "0.1"
