workshop/config/hello-moon.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: hello-moon
  name: hello-moon
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hello-moon
  template:
    metadata:
      labels:
        app: hello-moon
    spec:
      containers:
      - env:
        - name: MESSAGE
          value: Hello from a pod
        image: 192.168.1.11:5000/hello-world:latest
        imagePullPolicy: Always
        name: hello-moon
        resources:
          limits:
            cpu: "0.5"
            memory: 640Mi
          requests:
            cpu: "0.1"
            memory: 128Mi
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: hello-moon
  name: hello-moon-svc
spec:
  selector:
    app: hello-moon
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: hello-moon
  name: hello-moon
  annotations:
    openshift.io/host.generated: 'true'
spec:
  to:
    kind: Service
    name: hello-moon-svc
  wildcardPolicy: None
