workshop/config/hello-world-route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: hello-world
  name: hello-world
  annotations:
    openshift.io/host.generated: 'true'
spec:
  to:
    kind: Service
    name: hello-world-svc
    weight: 100
  wildcardPolicy: None
